# kanso

./: Cargo.toml  Makefile  README.md  build.rs
lib/fun/src/: algebra.rs  cat.rs  hm.rs  list.rs  skew.rs  sync.rs
lib/fun/src/group_relative/: list.rs
lib/fun/src/monoid_relative/: list.rs  mod.rs
lib/hashcons/src/: lib.rs
lib/lazy/src/: lib.rs
lib/tree-sitter-kanso/: Cargo.toml  grammar.js
lib/tree-sitter-kanso/corpus/: functions.txt
src/: .lazy.rs.swp  args.rs  cons.rs  disjoint_sets.rs  hc.rs  id.rs  lazy.rs  lens.rs  lib.rs  list.rs  main.rs  make.rs  meta.rs  name.rs  opts.rs  sets.rs  skew.rs  sync.rs  term.rs
tree-sitter-kanso/: Makefile  grammar.js  package.json
tree-sitter-kanso/corpus/: basic.kt
